--- a/src/assets/css/_layout.scss
+++ b/src/assets/css/_layout.scss
@@ -314,10 +314,12 @@
 					@include mixins.ATr();
 				}
 				::-webkit-input-placeholder {
+					color: rgba(153,153,153,.5);
 					padding: 0;
 					font-size: 24px;
 				}
 				::-moz-placeholder {
+					color: rgba(153,153,153,.5);
 					padding: 0;
 					font-size: 24px;
 				}
