review board css

--- a/src/assets/css/review_board.scss
+++ b/src/assets/css/review_board.scss
@@ -289,6 +289,9 @@
       margin-right: 0;
       .review_paging {
         margin-right: 0;
+        .btnMore {
+          border: 0;
+        }
       }
     }
     .shareLayer {
