--- a/src/assets/css/myshop.scss
+++ b/src/assets/css/myshop.scss
@@ -1735,6 +1735,10 @@
 						// display: grid;
 						grid-column: 1 / 3;
 					}
+
+					> form {
+						width: 100%;
+					}
 				}
 				.filter__search {
 					display: flex;
