수정사항 반영

--- a/src/assets/css/cart.scss
+++ b/src/assets/css/cart.scss
@@ -307,6 +307,7 @@
   }
   .ec-base-table.typeList .center td.right {
     padding-right: 0 !important;
+    white-space: nowrap;
   }
   .ec-base-table td.thumb {
     padding-bottom: 15px;
