수정사항 반영

--- a/src/assets/css/order.scss
+++ b/src/assets/css/order.scss
@@ -732,7 +732,7 @@ width: 100%;
             input[type=text], select {
               width: 90px !important;
               height: 46px;
-              text-align: center;
+              // text-align: center;
             }
           }
           #cashreceipt_reg_no {
