--- a/src/assets/css/_layout.scss
+++ b/src/assets/css/_layout.scss
@@ -61,8 +61,8 @@
 		.logo__link {
 			display: block;
 			// @include icons.retina-sprite(icons.$logo-group);
-			// width: 161px;
-			// height: 14px;
+			width: 161px;
+			height: 14px;
 		}
 	}
 
